kubernetes/n8n/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: n8n
  namespace: default
spec:
  ports:
    - port: 5678
      targetPort: 5678
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: n8n
  namespace: default
  labels:
    kubernetes.io/service-name: n8n
addressType: IPv4
ports:
  - port: 5678
endpoints:
  - addresses:
      - "100.106.96.18"
